<resources>
    <string name="app_name">Who Cat</string>
    <string name="search">Search</string>
    <string name="error_message">
        No cats found :( please try again, you know how they are.
    </string>
    <string name="enter_search">
        "Enter the first three letters of a cat breed, then click search"
    </string>
    <string name="hint">
        "Click search and your cat will show up here!"
    </string>
    <string name="scrollhint">
        "Scroll through some cat breeds here
"
    </string>


    <string name="adopt">Adopt now!</string>
    <string name="geo">Find our pet shelter!</string>
    <string name="gif">Get a random cat gif!</string>
    <string name="catimg">cute  mis eye colored kitten</string>
    <string name="catitle">Learn everything about cat breeds!</string>

    <!-- Add string values for the list preference -->
    <!-- Label for the color preference -->
    <string name="pref_color_label">Color mode</string>

    <!-- Label for Dark color preference -->
    <string name="pref_color_label_black">Dark mode</string>
    <!-- Label for light color preference -->
    <string name="pref_color_label_white">Cute mode</string>


    <!-- Key name for color preference in SharedPreferences -->
    <string name="pref_color_key" translatable="false">color</string>

    <!-- Value in SharedPreferences for dark color option -->
    <string name="pref_color_dark_value" translatable="false">purple</string>

    <!-- Value in SharedPreferences for light color option -->
    <string name="pref_color_light_value" translatable="false">pink</string>



    <string name="action_settings">Settings</string>
</resources>
